# gust-app

./: .env.example  .gitignore  GEMINI.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.railway  GEMINI.md  README.md  alembic.ini  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase0_baseline.py  0002_phase1_core_backend.py  0003_phase2_capture_extraction.py  0004_phase4_reminders_retention.py  0005_phase5_capture_staging.py  0006_add_subtask_titles_to_extracted_tasks.py  0007_add_tasks_pagination_index.py  0008_digest_dispatches.py  0009_task_descriptions.py  0010_enable_postgres_rls.py  0011_rate_limit_counters.py  0012_harden_backend_table_grants.py  0013_add_yearly_recurrence.py  0014_add_tasks_list_pagination_index.py
backend/app/: __init__.py
backend/app/core/: action_locks.py  app.py  dependencies.py  errors.py  input_safety.py  logging.py  middleware.py  rate_limits.py  request_security.py  security.py  settings.py  timing.py
backend/app/db/: __init__.py  engine.py  migrations.py  repositories.py  schema.py
backend/app/prompts/: __init__.py  extraction_prompts.py
backend/app/services/: __init__.py  (+12 more)
backend/tests/: conftest.py  test_auth_service.py  test_auth_session.py  test_captures.py  test_db_engine.py  test_extraction_comprehensive.py  test_extraction_guardrails.py  test_health.py  test_migrations.py  test_provider_services.py  test_reminders.py  test_repositories.py  test_routes.py  test_security_hardening.py  test_settings.py  test_tasks_groups.py
(+156 files in other folders)
