[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gust-backend"
version = "0.1.0"
description = "FastAPI backend foundation for Gust"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.15.2",
  "fastapi>=0.115.12",
  "pydantic-settings>=2.8.1",
  "pydantic>=2.11.3",
  "psycopg[binary]>=3.2.6",
  "sqlalchemy>=2.0.40",
  "uvicorn>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "ruff>=0.11.4"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
